# diplomat

./: .gitattributes  Cargo.toml  Makefile.toml
book/preprocessor/templates/: supports.md.jinja
book/src/: SUMMARY.md
book/src/attrs/: comparators.md
book/src/backends/: cpp.md
core/src/ast/: attrs.rs  macros.rs  mod.rs  modules.rs
core/src/hir/: attrs.rs  defs.rs  lifetimes.rs  lowering.rs  methods.rs  paths.rs  primitives.rs  ty_position.rs  type_context.rs  types.rs
example/c/include/: DataProvider.d.h  FixedDecimal.d.h  FixedDecimalFormatter.d.h  Locale.d.h
example/cpp/include/: DataProvider.d.hpp  FixedDecimal.d.hpp  FixedDecimalFormatter.d.hpp  Locale.d.hpp  diplomat_runtime.hpp
feature_tests/: Cargo.toml
feature_tests/c/include/: AttrOpaque1.d.h  AttrOpaque2.d.h  Bar.d.h  CallbackHolder.d.h  CallbackWrapper.h  DeprecatedOpaque.d.h  Float64Vec.d.h  Foo.d.h  MutableCallbackHolder.d.h  MyOpaqueEnum.d.h  MyString.d.h  MyString.h  Nested.d.h  Nested2.d.h  One.d.h  Opaque.d.h  OpaqueMutexedString.d.h  OpaqueThin.d.h  OpaqueThinIter.d.h  OpaqueThinVec.d.h  OptionOpaque.d.h  OptionOpaqueChar.d.h  OptionString.d.h  PrimitiveStructVec.d.h  PrimitiveStructVec.h  RefList.d.h  Two.d.h  (+10 more)
feature_tests/shared_rust/: Cargo.toml
feature_tests/src/: attrs.rs  callbacks.rs  imports.rs  lib.rs  opaque.rs  result.rs  slices.rs  structs.rs
feature_tests/static_rust/: Cargo.toml
macro/src/: lib.rs
runtime/src/: lib.rs  opaque.rs  result.rs
static_rust_macro/: Cargo.toml
static_rust_macro/src/: lib.rs
tool/: Cargo.toml
tool/src/: config.rs  lib.rs  main.rs
(+427 files in other folders)
