[package]
name = "diplomat_static_rust"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
diplomat_core.workspace = true
proc-macro2 = "1.0.97"
syn = "2.0.105"
quote = "1.0"
